Finish sign in google with  passport

--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
-PORT=3001
+HOST=localhost:3000
+PORT=3000
 DATABASE_URL=postgres://postgres:241299@localhost:5432/blog
+
+MAIL_USER=dangphu241299@gmail.com
+MAIL_PASSWORD=Phu123456
+
+CLIENT_ID=803369224359-d84ptship0be7l84qq8k4h83qhpvjf10.apps.googleusercontent.com
+CLIENT_SECRET=pUAFw3XCUCmvmMOWNqD0-jKy
+
+SECRET_KEY=phudeptrai
