--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.4",
+    "@types/jsonwebtoken": "^8.3.9",
+    "@types/passport": "^1.0.3",
+    "@types/passport-google-oauth": "^1.0.41",
     "@types/validator": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
@@ -32,7 +35,11 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.4.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.15",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "path": "^0.12.7",
     "pg": "^8.0.2",
     "pug": "^2.0.4"
